2020-02-12  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.2-alpha09 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.2-alpha09: Absinthe';git push
	git tag -a 4.9.2-alpha09 -m '';git push --tags

	* nco_ntp_vrt() investigating prs->hyb interpolation

	* nco_map_chk() add warning about self-overlapping source grids

2020-02-11  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.2-alpha08 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.2-alpha08: Vasisthasana';git push
	git tag -a 4.9.2-alpha08 -m 'ncks eliminate alarmist WARNINGs on regional grids, EASE area == 0.0 WARNINGS;ncremap -P mpas --prs_stt=integral works hydro1k almost, vrt prs->hyb PS';git push --tags

	* ncremap add vertical regrid examples to default usage

	* nco_map_chk() only issue WARNINGs for min(frac_a/b) cells when grid_b/a tiles sphere

2020-02-07  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() pure pressure input may now provide PS for use in interpolating to output hybrid files

2020-02-06  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() set horizontal grd_sz_in, grd_sz_out correctly for grd_in_prs

	* ncremap allow --prs_stt=integral to work with -P mpas

	* Clarify treatment of PS during vertical interpolation

2020-02-05  Charlie Zender  <zender@uci.edu>

	* nco_inq_varnatts() emit variable ID on error

	* nco_chk_map() check and WARNING for area_a/b == 0.0 prior to normalization to prevent unexpected divide-by-zero for EASE grid areas

	* nco_chk_map() eliminate some WARNINGs for grids not within 99% of tiling sphere

	* NCO 4.9.2-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.2-alpha07: Dandasana';git push
	git tag -a 4.9.2-alpha07 -m 'ncks chk_map msk_a/b; ncremap SAS needles+isoceles, use canonical ngl, cosine formula, crv axis/coordinates atts; ncks cori fix';git push --tags

	* Regrid (and plot with Panoply) EASE grid with aave though nco weight-generation has issues
